chore(demo): fix dark mode

--- a/projects/demo/src/app/app.component.css
+++ b/projects/demo/src/app/app.component.css
@@ -1,3 +1,8 @@
+[tuiDocHeader] {
+    color: var(--tui-text-primary);
+    background: var(--tui-background-base);
+}
+
 .t-links {
     display: flex;
     gap: 0.625rem;
